2004-06-23  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c (opt_args) : Do not abort when none of the 
	hosts in exclude_buf (i.e. -x) match the current wcoll.

2004-06-09  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_dsh_attr_init) : Added function to initialize
	pthread attr and set stacksize and detach state. 
	
	* src/pdsh/dsh.c (dsh) : Use _dsh_attr_init() instead of 
	pthread_attr_init() directly. Set stacksize argument using
	DSH_THREAD_STACKSIZE (Currently set to 128K).

	* README : Add note to look at README.QsNet for --with-qshell.

	* : Tagged pdsh-2-1-1


2004-06-01  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (_qsw_cap_create) : Fix multirail loop for
	libelan3 systems to never go past ELAN_MAX_RAILS.

2004-05-28  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak : Use regex instead of split() to allow for
	whitespace padding in node names (suggested by Ashley Pittman
	<ashley@quadrics.com>)

2004-05-26  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c (_slurm_wcoll) : Add extra "show_all"
	argument needed for slurm_load_jobs().

	* config/ac_elan.m4 : Fix typos. Abort configure if libelanhosts 
	not found.  

	* : Tagged pdsh-2-0-1

2004-05-12  Mark Grondona <mgrondona@llnl.gov>
	
	* src/pdsh/dsh.c (_rcp_thread) : Generate error message and copy
	any pending stderr data to user when _rcp_response() fails.
	(gnats:433)

2004-05-12  Albert Chu <chu11@llnl.gov>

	* doc/pdcp.1.in: Added note that pdcp must be installed on remote
	destination nodes.
	
2004-05-06  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/elanhosts.c, src/qsnet/elanhosts.h, src/qsnet/Makefile.am :
	Removed elanhosts.[ch] (functionality moved into libelanhosts library).

	* config/ac_elan.m4 : Check for presence of libelanhosts.

2004-04-27  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qshell.c (get_qshell_info) : Increase max environment
	string from 1k to 4k.

2004-04-26  Mark Grondona <mgrondona@llnl.gov>
