@@ -242,6 +242,10 @@ fi
 AC_SUBST(PDSH_VERSION)
 AC_SUBST(PDSH_VERSION_FULL)
 
+
+AC_DEFINE(WITH_LSD_FATAL_ERROR_FUNC, 1, [Have definition of lsd_fatal_error])
+
+
 AH_BOTTOM(
 [#ifdef WITH_DMALLOC
 #  include <stdlib.h>
